--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -32,9 +32,7 @@ services:
       - "5672:5672"    # основной AMQP-порт
       - "15672:15672"  # web-интерфейс управления
     volumes:
-      # Локальная директория для сохранения очередей между перезапусками
-      - ../data/rabbitmq:/var/lib/rabbitmq
-    restart: on-failure
+      - rabbitmq_data:/var/lib/rabbitmq
 
   database:
     image: postgres:16
@@ -46,6 +44,9 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      # Локальная директория для сохранения данных БД
-      - ../data/postgres:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     restart: unless-stopped
+
+volumes:
+  postgres_data:
+  rabbitmq_data:
