--- a/deploy/requirements.backend.txt
+++ b/deploy/requirements.backend.txt
@@ -1,14 +1,16 @@
-asyncpg
-bcrypt
-boto3
-botocore
-dotenv
-celery
-fastapi
-uvicorn
-sqlalchemy
-python-multipart
-pydantic
-pydantic[email]
-PyJWT
-requests
+asyncpg==0.30.0
+bcrypt==5.0.0
+boto3==1.42.3
+botocore==1.42.3
+dotenv==0.9.9
+celery==5.6.0
+fastapi==0.121.2
+uvicorn==0.38.0
+SQLAlchemy==2.0.44
+python-multipart==0.0.20
+pydantic[email]==2.11.10
+PyJWT==2.10.1
+requests==2.32.5
+pytest==9.0.2
+pytest-asyncio==1.3.0
+aiosqlite==0.21.0
