--- a/deploy/requirements.worker.txt
+++ b/deploy/requirements.worker.txt
@@ -1,17 +1,16 @@
-celery
-asyncpg
-bcrypt
-boto3
-dotenv
-pydantic
-pydantic[email]
-sqlalchemy
-huggingface-hub[cli]==0.26.1
-tokenizers==0.20.3
-transformers==4.46.3
-diffusers==0.30.2
-torch
-sentencepiece
-sacremoses
-accelerate
-requests
+celery==5.6.0
+asyncpg==0.30.0
+bcrypt==5.0.0
+boto3==1.42.3
+dotenv==0.9.9
+pydantic[email]==2.11.10
+SQLAlchemy==2.0.44
+huggingface-hub[cli]==0.36.0
+tokenizers==0.22.1
+transformers==4.57.3
+diffusers==0.35.2
+torch==2.9.1
+requests==2.32.5
+sentencepiece==0.2.1
+sacremoses==0.1.1
+accelerate==1.12.0
